--- a/views/teachers/create.njk
+++ b/views/teachers/create.njk
@@ -3,7 +3,7 @@
         <form class="card" method="POST" action="/teachers">
                 <div class="avatar" style="background: url('https://source.unsplash.com/collection/8360382/1600x900') no-repeat center center / cover; border-radius: 4rem  0 0 4rem"></div>
                 <div class="details">
-                    <h3>DETALHES</h3>
+                    <h3>Novo Professor</h3>
 
                     <div class="item">
                         <div>Avatar URL</div>
@@ -15,7 +15,7 @@
                     <div class="item">
                         <div>Nome Completo</div>
                         <div>
-                            <input type="text" name="name" >
+                            <input type="text" name="name" placeholder="Nome completo">
                         </div>
                     </div>
 
@@ -41,19 +41,21 @@
                     <div class="item">
                         <div>Tipo de Aula</div>
                         <div>
-                            <input type="radio" name="presencial">Presencial
-                            <input type="radio" name="distancia" >À distância
+                            <span><input type="radio" name="type" value="presencial">Presencial</span>
+                            <span><input type="radio" name="type" value="distancia">À distância </span>                
                         </div>
                     </div>
 
                     <div class="item">
                         <div>Área de atuação</div>
                         <div>
-                            <input type="text" name="field">
+                            <input type="text" name="field" placeholder="Digite a área de atuação separado por vírgula">
                         </div>
                     </div>
-                    
+                    <button type="submit">Salvar</button>
                 </div>
+
+                
         </form>
         
     {% endblock %}
