--- a/views/teachers/index.njk
+++ b/views/teachers/index.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk"%}
     {% block content %}
         <div class="card">
-                <div class="avatar" style="background: url('https://source.unsplash.com/collection/8360382/1600x900') no-repeat center center / cover; border-radius: 4rem  0 0 4rem"></div>
+                <div class="avatar" style="background: url('https://source.unsplash.com/collection/8360382/1600x900') no-repeat center center / cover"></div>
                 <div class="details">
                     <h3>DETALHES</h3>
 
@@ -27,7 +27,9 @@
 
                     <div class="item">
                         <div>Acompanhamento</div>
-                        <div>Matemática</div>
+                        <div>
+                            <span>Matemática</span>
+                        </div>
                     </div>
 
                     <div class="item">
