--- a/public/style.css
+++ b/public/style.css
@@ -140,7 +140,8 @@ input::placeholder {
     font-weight: normal;
 }
 
-button[type="submit"] {
+button[type="submit"],
+a.button {
     background-color: var(--primary-color);
     width: 100%;
     border: none;
@@ -150,6 +151,12 @@ button[type="submit"] {
     border-radius: 0.4rem;
     margin-top: 3.2rem;
     font-size: 1.6rem;
+}
+
+a.button {
+    display: block;
+    text-align: center;
+    text-decoration: none;
 }
 
 @media (max-width: 375px ) {
