--- a/views/teachers/edit.njk
+++ b/views/teachers/edit.njk
@@ -3,11 +3,10 @@
         <form class="card" method="POST" action="/teachers">
                 <div class="avatar" style="background: url('https://source.unsplash.com/collection/8360382/1600x900') no-repeat center center / cover; border-radius: 4rem  0 0 4rem"></div>
                 <div class="details">
-                    <h3>Novo Professor</h3>
+                    <h3>Editar Professor</h3>
 
-                    {% include 'teachers/fields.njk' %}}
+                    {% include 'teachers/fields.njk' %}
                 </div>                
         </form>
         
     {% endblock %}
-   
