--- a/public/style.css
+++ b/public/style.css
@@ -159,6 +159,11 @@ a.button {
     text-decoration: none;
 }
 
+#form-delete button {
+    margin-top: 0.8rem;
+    background-color: #d65a57;
+}
+
 @media (max-width: 375px ) {
     .card {
         width: 70%;
