--- a/views/teachers/create.njk
+++ b/views/teachers/create.njk
@@ -5,7 +5,7 @@
                 <div class="details">
                     <h3>Novo Professor</h3>
 
-                    {% include 'teachers/fields.njk' %}}
+                    {% include 'teachers/fields.njk' %}
                 </div>                
         </form>
         
