--- a/public/style.css
+++ b/public/style.css
@@ -107,7 +107,8 @@ header {
     font-size: 1.2rem; 
 }
 
-.details .item span {
+.details .item span,
+.acompanhamento {
     padding: 0.8rem 1.6rem;
     background-color:var(--orange-color);
     border-radius: 1.6rem;
@@ -162,6 +163,66 @@ a.button {
 #form-delete button {
     margin-top: 0.8rem;
     background-color: #d65a57;
+}
+
+/* ------ table ------ */
+.table-container {
+    display: block;
+    padding: 4rem;
+}
+
+.table-container table {
+    border-spacing: 0;
+}
+
+.table-container thead tr th {
+    text-align: left;
+}
+
+td, th {
+    padding: 1.6rem;
+    border-bottom: 1px solid #d9d9d9;
+}
+
+th {
+    text-transform: uppercase;
+    color: var(--primary-color);
+    font-size: 1.6rem;
+}
+
+tbody tr {
+    font-size: 1.2rem;
+}
+
+tbody tr:last-child td {
+    border: none;
+}
+
+tbody tr td:last-child a span {
+    text-decoration: none;
+    color: rgb(148, 136, 136);
+}
+
+tbody tr td:last-child span {
+    cursor: pointer; 
+ } 
+
+tbody tr td:first-child {
+    display: grid;
+    grid-template-columns: 64px 1fr;
+    align-items: center;
+}
+
+tbody tr td:first-child span {
+    width: 40px;
+    height: 40px;
+    
+    background-position: center; 
+    background-size: cover;
+
+    border-radius: 50%;
+    box-shadow: 3px 1px 6px -4px black;
+    border: 2px solid white;
 }
 
 @media (max-width: 375px ) {
