--- a/views/layout.njk
+++ b/views/layout.njk
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>Tuttoring</title>
 </head>
@@ -11,7 +12,7 @@
 <body>
     <header>
         <div class="menu">
-            <a href="#">Teachers</a>
+            <a href="/teachers">Teachers</a>
             <a href="#">Students</a>
         </div>
     </header>
