--- a/views/teachers/index.njk
+++ b/views/teachers/index.njk
@@ -1,43 +1,40 @@
 {% extends "layout.njk"%}
     {% block content %}
-        <div class="card">
-                <div class="avatar" style="background: url('https://source.unsplash.com/collection/8360382/1600x900') no-repeat center center / cover"></div>
-                <div class="details">
-                    <h3>DETALHES</h3>
+        <div class="card table-container">
+            <table width="100%">
+                <thead>
+                    <tr>
+                        <th>Nome Completo</th>
+                        <th>Acompanhamento</th>
+                        <th>Ação</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for teacher in teachers %}
+                    <tr>
+                        <td>
+                            <span style="background-image: url({{ teacher.avatar_url}})"></span>
+                            {{ teacher.name }}</td>
+                        <td>
+                            <span>{{ teacher.field }}</span>
+                        </td>
+                        <td>
+                            <a href="/teachers/{{ teacher.id }}">
+                                <span class="material-icons">
+                                    visibility
+                                </span>
+                            </a>
+                            <a href="/teachers/{{ teacher.id }}/edit">
+                                <span class="material-icons">
+                                    edit
+                                </span>
+                            </a>
+                        </td>
 
-                    <div class="item">
-                        <div>Nome completo</div>
-                        <div>Ana</div>
-                    </div>
-
-                    <div class="item">
-                        <div>Idade</div>
-                        <div>23</div>
-                    </div>
-
-                    <div class="item">
-                        <div>Grau de escolaridade</div>
-                        <div>Mestrado</div>
-                    </div>
-
-                    <div class="item">
-                        <div>Tipo de aula</div>
-                        <div>Presencial</div>
-                    </div>
-
-                    <div class="item">
-                        <div>Acompanhamento</div>
-                        <div>
-                            <span>Matemática</span>
-                        </div>
-                    </div>
-
-                    <div class="item">
-                        <div>Desde</div>
-                        <div>29/08/2020</div>
-                    </div>
-                    
-                </div>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>     
     {% endblock %}
    
