--- a/views/layout.njk
+++ b/views/layout.njk
@@ -13,12 +13,12 @@
     <header>
         <div class="menu">
             <a href="/teachers">Teachers</a>
-            <a href="#">Students</a>
+            <a href="/students">Students</a>
         </div>
     </header>
 
     {% block content %}
     {% endblock %}
-
+    <script src="/script.js"></script>
 </body>
 </html>
