--- a/public/style.css
+++ b/public/style.css
@@ -171,6 +171,18 @@ a.button {
     padding: 4rem;
 }
 
+.table-container .new {
+    background-color: var(--primary-color);
+    padding: 0.8rem 1.6rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+    font-size: 1.2rem;
+    border-radius: 0.4rem;
+    margin-bottom: 0.4rem;
+    display: inline-block;
+}
+
 .table-container table {
     border-spacing: 0;
 }
