--- a/views/teachers/index.njk
+++ b/views/teachers/index.njk
@@ -1,6 +1,7 @@
 {% extends "layout.njk"%}
     {% block content %}
         <div class="card table-container">
+            <a href="/teachers/create" class="new">Novo</a>
             <table width="100%">
                 <thead>
                     <tr>
