--- a/views/students/edit.njk
+++ b/views/students/edit.njk
@@ -3,24 +3,25 @@
 {% block content %}
 
     <div class="card">
-        <div class="avatar" style="background: url('https://source.unsplash.com/collection/8360382/1600x900') no-repeat center center / cover; border-radius: 4rem  0 0 4rem"></div>
+        <div class="avatar" style="background: url('{{ student.avatar_url }}') no-repeat center center / cover; border-radius: 4rem  0 0 4rem"></div>
         <div class="details">
-            <form method="POST" action="/teachers?_method=PUT">                
-                <h3>Editar Professor</h3>
+            <form method="POST" action="/students?_method=PUT">                
+                <h3>Editar Aluno</h3>
 
-                {% include 'teachers/fields.njk' %}
+                {% include 'students/fields.njk' %}
 
-                <input type="hidden" name="id" value={{ teacher.id }}>                        
+                <input type="hidden" name="id" value={{ student.id }}>                        
             </form>
 
-            <form id="form-delete" action="/teachers?_method=DELETE" method="post">
-                <input type="hidden" name="id" value={{ teacher.id }}>
+            <form id="form-delete" action="/students?_method=DELETE" method="post">
+                <input type="hidden" name="id" value={{ student.id }}>
                 <button type="submit">Deletar</button>
             </form>
 
+            {% include "students/confirm.njk"%}
+
         </div> 
     </div>
-
         
         
 {% endblock %}
