--- a/views/students/index.njk
+++ b/views/students/index.njk
@@ -6,26 +6,30 @@
                 <thead>
                     <tr>
                         <th>Nome Completo</th>
-                        <th>Acompanhamento</th>
+                        <th>Email</th>
+                        <th>Ano escolar</th>
                         <th>Ação</th>
                     </tr>
                 </thead>
                 <tbody>
-                    {% for teacher in teachers %}
+                    {% for student in students %}
                     <tr>
                         <td>
-                            <span style="background-image: url({{ teacher.avatar_url}})"></span>
-                            {{ teacher.name }}</td>
+                            <span style="background-image: url({{ student.avatar_url}})"></span>
+                            {{ student.name }}</td>
                         <td>
-                            <span>{{ teacher.field }}</span>
+                            <span>{{ student.email }}</span>
                         </td>
                         <td>
-                            <a href="/teachers/{{ teacher.id }}">
+                            {{ student.school_year }}
+                        </td>
+                        <td>
+                            <a href="/students/{{ student.id }}">
                                 <span class="material-icons">
                                     visibility
                                 </span>
                             </a>
-                            <a href="/teachers/{{ teacher.id }}/edit">
+                            <a href="/students/{{ student.id }}/edit">
                                 <span class="material-icons">
                                     edit
                                 </span>
